# BRIGHTER

./: README.md  llms.py  llms_array.sh  majority_random_baseline.py  process_llm_results.py  process_lm_results.py  pyproject.toml  regular_lms_track_ab.py  regular_lms_track_ab_array.sh  regular_lms_track_c.py  regular_lms_track_c_array.sh
track_a/test/: ron.csv
track_b/test/: ron.csv
track_b/train/: ron.csv
