[project]
name = "2025-semeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scikit-learn>=1.6.1",
    "transformers>=4.48.2",
    "unsloth>=2025.1.8",
    "vllm>=0.7.1",
    "wandb>=0.19.6",
]
